--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@
 # Review documentation to determine if you should use `theme` or `remote_theme`
 # https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
 
-# theme: 'minimal-mistakes-jekyll'
-remote_theme: 'mmistakes/minimal-mistakes'
+theme: 'minimal-mistakes-jekyll'
+#remote_theme: 'mmistakes/minimal-mistakes'
 minimal_mistakes_skin: 'air' # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
@@ -97,7 +97,7 @@ author:
   avatar: # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio: 'Java Developer'
   location: 'Seoul, South Korea'
-  email:
+  email: 
   links:
     - label: 'Email'
       icon: 'fas fa-fw fa-envelope-square'
