--- a/package.json
+++ b/package.json
@@ -1,54 +1,23 @@
 {
-    "name": "casper",
-    "description": "The default personal blogging theme for Ghost. Beautiful, minimal and responsive.",
-    "demo": "https://demo.ghost.io",
-    "version": "2.1.9",
-    "scripts": {
-        "gulp": "gulp"
-    },
+    "name": "blog",
+    "description": "",
+    "version": "1.0.0",
     "engines": {
         "ghost": ">=1.2.0"
     },
     "license": "MIT",
-    "screenshots": {
-        "desktop": "assets/screenshot-desktop.jpg",
-        "mobile": "assets/screenshot-mobile.jpg"
-    },
-    "author": {
-        "name": "Ghost Foundation",
-        "email": "hello@ghost.org",
-        "url": "https://ghost.org"
-    },
-    "gpm": {
-        "type": "theme",
-        "categories": [
-            "Minimal",
-            "Magazine"
-        ]
-    },
-    "keywords": [
-        "ghost",
-        "theme"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/TryGhost/Casper.git"
-    },
-    "bugs": "https://github.com/TryGhost/Casper/issues",
-    "contributors": "https://github.com/TryGhost/Casper/graphs/contributors",
     "devDependencies": {
-        "autoprefixer": "6.3.6",
-        "cssnano": "3.7.1",
-        "gulp": "3.9.1",
-        "gulp-livereload": "3.8.1",
-        "gulp-postcss": "6.1.1",
-        "gulp-sourcemaps": "1.6.0",
-        "gulp-util": "3.0.7",
-        "gulp-watch": "4.3.8",
-        "gulp-zip": "4.0.0",
-        "postcss-color-function": "2.0.1",
-        "postcss-custom-properties": "5.0.1",
-        "postcss-easy-import": "1.0.1"
+        "autoprefixer": "^9.8.8",
+        "cssnano": "^4.1.11",
+        "graceful-fs": "^4.2.9",
+        "gulp": "^4.0.2",
+        "gulp-imagemin": "^5.0.3",
+        "gulp-postcss": "^9.0.1",
+        "gulp-sourcemaps": "^2.6.5",
+        "minimatch": "^3.1.2",
+        "postcss-color-function": "^4.0.1",
+        "postcss-custom-properties": "^12.1.4",
+        "postcss-easy-import": "^3.0.0"
     },
     "config": {
         "posts_per_page": 25
